# viandas-e-marmitex

./: .gitignore  README.md  create-test-customer-js.js  create-test-customer.ts  docker-compose.yml  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json
app/: globals.css  layout.tsx  page.tsx
docs/: README.md  api.md  arquitetura.md  assistente-ro-sql.md  como-logar-entregador.md  desktop.md  exemplo-busca-inteligente.md  exemplo-resposta-formatada.md  explicacao-rastreamento-visual.md  fluxo-rastreamento-entregador.md  implementacao-pagina-entregador.md  impressao-termica.md  modelagem-dados.md  next-steps-rastreamento.md  presets-produtos.md  rbac.md  relatorios.md  requisitos.md  resumo-rastreamento.md  setup-dev.md  teste-completo-realizado.md  teste-pagina-entregador.md  ux-pdv.md  version-operacao.md
lib/: api.ts  auth-customer.ts  auth.ts  config.ts  customer-auth.ts  email-templates.ts  email.ts  facial-auth-token.ts  facial-recognition-shared.ts  facial-recognition.ts  mobile-auth.ts  pdf-generator.ts  prisma.ts  rate-limit.ts  thermal-print-utils.ts  thermal-styles.ts  types.ts  version-metadata.ts  whatsapp.ts
plans/: adjust-customer-photo-modal-design.md  facial-capture-modal-layout-adjustment.md  facial-capture-modal-redesign.md  fix-customer-photo-modal-layout.md  fix-customer-photo-modal-zindex.md  integrate-upload-to-customer-photo-modal.md  kanban-system-plan.md  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+428 files in other folders)
