[package]
name = "viandas-desktop"
version = "0.1.0"
description = "Viandas e Marmitex Desktop"
authors = ["viandas"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
webbrowser = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
